#1416: Add  fixes for spacing from YU's feedback list

--- a/src/styles/home/_global.scss
+++ b/src/styles/home/_global.scss
@@ -801,6 +801,12 @@
   //thead th, tbody td {
     //padding: 0.5rem;
   //}
+
+  // Ensure table dates don't wrap
+
+  .table__header--date, table__cell--date {
+    width: 110px;
+  }
 }
 
 .drop__menu--date {
